[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "DtParse"
version = "0.0.1"
dependencies = [
]
requires-python = ">=3.8"
authors = [
  {name = "James Richardson", email = "jdgrichardson@hotmail.co.uk"},
]
maintainers = [
  {name = "James Richardson", email = "jdgrichardson@hotmail.co.uk"}
]
description = "DtParse project"
readme = "README.md"
license = "MIT"  # or license = {file = "LICENSE.txt"} for legacy declaration
license-files = ["LICEN[CS]E.*"]
keywords = []
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

#[project.optional-dependencies]
#gui = []
#cli = [
#]

[project.urls]
Homepage = "https://github.com/Skifarer/DtParse"
Documentation = "https://readthedocs.org"
Repository = "https://github.com/Skifarer/DtParse.git"
"Bug Tracker" = ""
Changelog = ""

#[project.scripts]
#spam-cli = "spam:main_cli"

#[project.gui-scripts]
#spam-gui = "spam:main_gui"

#[project.entry-points."spam.magical"]
#tomatoes = "spam:main_tomatoes"